tests/Error/ErrorCollector/FixerRunnerSource/easy-coding-standard.neon
checkers:
    - PhpCsFixer\Fixer\PhpUnit\PhpUnitStrictFixer
    PhpCsFixer\Fixer\ClassNotation\VisibilityRequiredFixer:
        - const
        - property
        - method
